--- a/Eindwerk Nieuw Nieuw/style.css
+++ b/Eindwerk Nieuw Nieuw/style.css
@@ -21,13 +21,13 @@ body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
 }
 
-/* --------------------------------------------------------------Menu */
-.menu {
+/* --------------------------------------------------------------Navbar */
+.Navbar {
     display: flex;
     
 }
 
-.menu a {
+.Navbar a {
     color: #fff;
     text-decoration: none;
     margin-left: 20px;
@@ -38,7 +38,7 @@ body {
 
 }
 
-.menu a:hover {
+.Navbar a:hover {
     /* text-decoration: underline; */
     box-shadow: 1px -1px 51px -6px #44bd4e;
     margin-top: 5px;
@@ -61,9 +61,15 @@ body {
 }
 
 /* -------------------------------------------------------------------Inhoud */
-.content {
+.content-menu {
     padding: 20px;
     margin-bottom: 100px;
+}
+.content-menu button{
+    background-color: #3a62b7;
+    border-radius: 10px;
+    border: none;
+    color: whitesmoke;
 }
 
 .menu-items {
