--- a/Eindwerk Nieuw Nieuw/style.css
+++ b/Eindwerk Nieuw Nieuw/style.css
@@ -101,6 +101,24 @@ body {
 .content-home h1{
     text-align: center;
 }
+.content-home .foto {
+    position: relative;
+    width: 100%;
+    height: 60vh; /* Use viewport height to keep the image responsive */
+    background: url('afbeeldingen/homeachtergrond.jpg') no-repeat center center;
+    background-size: cover;
+}
+
+.content-home .foto .text {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white; /* Adjust color based on your design */
+    text-align: center;
+    font-size: 2em; /* Adjust font size as needed */
+    width: 100%;
+}
 
 
 /* -------------------------------------------------------------------Inhoud Menu */
@@ -158,6 +176,7 @@ body {
     text-align: center;
     width: 100%;
     position: relative; /* Relatieve positionering */
+    display: flex;
 }
 
 
@@ -212,5 +231,8 @@ body {
 
     .menu-item {
         width: 100%;
+    }
+    .footer{
+        display: block;
     }
 }
