--- a/Eindwerk Nieuw Nieuw/style.css
+++ b/Eindwerk Nieuw Nieuw/style.css
@@ -1,3 +1,6 @@
+*{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
 body {
     margin: 0;
     font-family: Arial, sans-serif;
@@ -36,6 +39,7 @@ body {
     border-radius: 5vw !important;
     transition: 0.5s;
     cursor: pointer;
+    
 
 }
 
@@ -70,6 +74,9 @@ body {
     /* text-decoration: underline; */
     box-shadow: 1px -1px 51px -6px #15353d;
     margin-top: 5px;
+}
+div.header div.Navbar a{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 /* -----------------------------------------------------------------------------------------Inhoud Index */
@@ -234,6 +241,13 @@ main.container{
     text-decoration: none;
     border: 1px solid black;
 }
+div.container{
+    padding-left:40%;
+    width:100%;
+}
+h1.h1Toevoegen{
+    width: 10%;
+}
 .producten{
     padding-left:40%;
     width:100%;
@@ -250,9 +264,9 @@ a.buy-button{
 /* ------------------------------------------------------------ Contact */
 form.contact {
     margin: 4% auto;
-    margin-top: 11%;
+    margin-top: 4%;
     width: 60%;
-    padding: 15%;
+    padding: 4%;
     height: 60%;;
     border: solid #292929;
     border-radius: 30px;
@@ -362,6 +376,10 @@ form.contact input[type="submit"]:hover{
 .bi{
     color: black;
     text-decoration: none;
+}
+div.logo .bi{
+    color: rgb(59, 206, 59);
+    width: 10%;
 }
 /* ----------------------------------------------LOGIN */
 
